fix & add new todo column
