# models/dtos/create_todo_request.go
@@ -1,9 +1,10 @@
 package dtos
 
 type CreateTodoRequest struct {
-	Title       string `json:"title" binding:"required"`
-	Priority    string `json:"priority" binding:"oneof=low medium high"`
-	Description string `json:"description"`
-	Due         string `json:"due" binding:"required"`
-	CategoryID  uint   `json:"categoryId"`
+	Title       string  `json:"title" binding:"required"`
+	Description *string `json:"description"`
+	AssignedTo  *uint   `json:"assignedTo"`
+	Priority    string  `json:"priority" binding:"oneof=low medium high"`
+	Due         string  `json:"due" binding:"required"`
+	CategoryID  uint    `json:"categoryId"`
 }
