# models/dtos/update_todo_request.go
@@ -2,8 +2,10 @@ package dtos
 
 type UpdateTodoRequest struct {
 	Title       *string `json:"title"`
+	Description *string `json:"description"`
+	AssignedTo  *uint   `json:"assignedTo"`
 	Priority    *string `json:"priority" binding:"omitempty,oneof=low medium high"`
 	Status      *string `json:"status" binding:"omitempty,oneof='pending' 'in progress' 'done'"`
-	Description *string `json:"description"`
 	Due         *string `json:"due"`
+	CategoryID  *uint   `json:"categoryId"`
 }
