# models/todo.go
@@ -5,8 +5,8 @@ import "time"
 type Todo struct {
 	ID          uint      `json:"id" gorm:"primaryKey"`
 	Title       string    `json:"title" gorm:"not null;unique"`
-	Description string    `json:"description" gorm:"type:text"`
-	AssignedTo  uint      `json:"assignedTo"`
+	Description *string   `json:"description" gorm:"type:text"`
+	AssignedTo  *uint     `json:"assignedTo"`
 	Status      string    `json:"status" gorm:"type:enum('pending','in progress','done');default:'pending';not null"`
 	Priority    string    `json:"priority" gorm:"type:enum('low','medium','high');default:'low';not null"`
 	CategoryID  uint      `json:"categoryId" gorm:"not null"` // foreign key
@@ -15,4 +15,5 @@ type Todo struct {
 	CreatedAt   time.Time `json:"createdAt"`
 	CreatedBy   uint      `json:"createdBy" gorm:"not null"`
 	UpdatedAt   time.Time `json:"updatedAt"`
+	UpdatedBy   *uint     `json:"updatedBy"`
 }
